# Axis-Render

./: .gitignore  CMakeLists.txt  CMakelists.txt  README.md
asset/: fragment.frag  vertex.vert
assets/: test.txt
assets/models/BellX1/: bell_x1-full_resolution.mtl
assets/models/Medal/: Medal.mtl
assets/models/Space Shuttle/: spaceShuttle.mtl
assets/models/Triceratops/: triceratops_horridus_marsh_1889-150k.mtl
assets/models/Vase/: Vase.mtl
assets/models/andrew-jackson-silver-medal-150k/: andrew-jackson-silver-medal-150k-4096.mtl
assets/models/brickCylinder/: brickCylinder.mtl
assets/models/spaceShuttle/: orbiter_space_shuttle_ov-103_discovery-150k.mtl  spaceShuttle.mtl
assets/shaders/: ascii.frag  fragment.frag  gouraudObj.frag  gouraudObj.vert  grayscale.frag  model.frag  obj.frag  obj.vert  phongObj.frag  phongObj.vert  pointLight.frag  sketch.frag  test_fragment.frag  test_vertex.vert  vertex.vert  worldGrid.frag  worldGrid.vert
include/: UIHandler.hpp  camera.hpp  constants.hpp  mesh.hpp  model.hpp  mvp.hpp  object.hpp  pointLight.hpp  shader.hpp  shaderProgram.hpp  stateManager.hpp  texture.hpp  tools.hpp  window.hpp
include/lighting/: lightCaster.hpp  lighting.hpp  pointLight.hpp  utils.hpp
include/rendering/: mesh.hpp  model.hpp  worldGrid.hpp
include/shader/: shader.hpp  shaderProgram.hpp
include/utils/: constants.hpp  utils.hpp
src/: UIHandler.cpp  camera.cpp  main.cpp  mesh.cpp  model.cpp  mvp.cpp  object.cpp  pointLight.cpp  shader.cpp  shaderProgram.cpp  stb_image.cpp  window.cpp
src/lighting/: lightCaster.cpp  lighting.cpp  pointLight.cpp
src/rendering/: mesh.cpp  model.cpp  worldGrid.cpp
src/shader/: shader.cpp  shaderProgram.cpp
